// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CategoryField > renders combobox input 1`] = `
<div
  class="tw:mb-3"
  data-test-id="category-field"
>
  <div
    class="tw:relative"
  >
    <div
      class="tw:w-full tw:my-2"
    >
      <div
        class="tw:relative tw:border tw:rounded-[var(--radius-lg)] tw:bg-[var(--color-surface)] tw:transition-colors tw:border-[var(--color-border)]"
      >
        <label
          class="tw:absolute tw:-top-2 tw:left-3 tw:px-1 tw:bg-[var(--color-surface)] tw:text-xs tw:font-medium tw:text-[var(--color-text-secondary)]"
          for="category"
        >
          Category
        </label>
        <input
          aria-controls="categories-1"
          aria-expanded="false"
          class="tw:w-full tw:h-11 tw:px-4 tw:bg-transparent tw:border-0 tw:outline-none tw:text-base tw:transition-colors tw:focus:outline-none tw:focus:ring-2 tw:focus:ring-[var(--color-primary)]/30"
          id="category"
          name="category"
          role="combobox"
          type="text"
          value="Produce"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`CategoryField > renders when no category or categories given 1`] = `
<div
  class="tw:mb-3"
  data-test-id="category-field"
>
  <div
    class="tw:relative"
  >
    <div
      class="tw:w-full tw:my-2"
    >
      <div
        class="tw:relative tw:border tw:rounded-[var(--radius-lg)] tw:bg-[var(--color-surface)] tw:transition-colors tw:border-[var(--color-border)]"
      >
        <label
          class="tw:absolute tw:-top-2 tw:left-3 tw:px-1 tw:bg-[var(--color-surface)] tw:text-xs tw:font-medium tw:text-[var(--color-text-secondary)]"
          for="category"
        >
          Category
        </label>
        <input
          aria-controls="categories-2"
          aria-expanded="false"
          class="tw:w-full tw:h-11 tw:px-4 tw:bg-transparent tw:border-0 tw:outline-none tw:text-base tw:transition-colors tw:focus:outline-none tw:focus:ring-2 tw:focus:ring-[var(--color-primary)]/30"
          id="category"
          name="category"
          role="combobox"
          type="text"
          value=""
        />
      </div>
    </div>
  </div>
</div>
`;
